Update drugapi